# eas-rs

./: Cargo.toml  LICENSE  README.md
eas-contracts/: Cargo.toml  README.md
eas-contracts/src/: address.rs  attestation_resolver.rs  attester_resolver.rs  data_resolver.rs  eas.rs  ecdsa.rs  eip712_proxy.rs  eip712_verifier.rs  erc20.rs  expiration_time_resolver.rs  i_schema_registry.rs  i_schema_resolver.rs  ieas.rs  ierc20.rs  ierc20_metadata.rs  ierc20_permit.rs  lib.rs  math.rs  ownable.rs  paying_resolver.rs  permissioned_eip712_proxy.rs  recipient_resolver.rs  revocation_resolver.rs  safe_erc20.rs  schema_registry.rs  schema_resolver.rs  semver.rs  shared_types.rs  strings.rs  token_resolver.rs  value_resolver.rs
src/: constants.rs  eas.rs  lib.rs  schema.rs  schema_registry.rs
